--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Calory calculator</title>
   </head>
   <body>
     <header class="container text-center mt-5">
@@ -270,7 +270,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">
-              Twoje zapotrzebowanie kalorycne wynosi
+              Twoje zapotrzebowanie kaloryczne wynosi
             </h5>
             <button
               type="button"
